tests/execution_spec/snapshots/execution_spec__auth-protected-without-auth.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "@protected operator is used but there is no @link definitions for auth providers",
    "trace": [
      "Query",
      "data",
      "@protected"
    ],
    "description": null
  }
]
