tests/execution_spec/snapshots/execution_spec__batching-disabled.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int!): User
}

scalar Url

type User {
  id: Int
  name: String
  username: String
}

schema {
  query: Query
}
