tests/execution_spec/snapshots/execution_spec__caching.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type Query {
  fieldCache: Type @http(path: "/field-cache") @cache(maxAge: 30000)
  fieldCacheList: [Type] @http(path: "/field-cache-list") @cache(maxAge: 30000)
  typeCache: TypeCache
}

type Type {
  id: Int
}

type TypeCache @cache(maxAge: 1000) {
  a: Type @http(path: "/type-cache-a")
  b: Type @http(path: "/type-cache-b")
  list: [Type] @http(path: "/type-cache-list")
}
